added resource descriptions to doc
