# app/Http/Controllers/Api/Organization/SearchOrganizationsByGeoRectangleController.php
@@ -48,7 +48,18 @@ final class SearchOrganizationsByGeoRectangleController extends Controller
      * *         @OA\Schema(type="float"),
      *           description="Долгота правой нижней точки прямоугольника"
      * *     ),
-     * *    @OA\Response(response=200, description="Успешный ответ"),
+     *     @OA\Response(response=200,
+     * * *       description="Успешный ответ",
+     * *         @OA\JsonContent(
+     * * *             type="object",
+     * * *             @OA\Property(
+     * * *                 property="data",
+     * * *                 type="array",
+     * * *                 description="Список организаций",
+     * * *                 @OA\Items(ref="#/components/schemas/OrganizationResource")
+     * * *             )
+     * * *         )
+     * * *     ),
      *      @OA\Response(response=422, description="Неправильные параметры")
      * )
      */
